test/parseError2.slq

def main(){
	f:=(g:ğ”¹Ã—ğ”¹const ğŸ™â†’ğ”¹)â‡’g(false,false,()); // error
} // error
